--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
          "description": "my.telegram.org adresindən API HASH alın",
          "value": ""
       },
-      "API_HASH": {
+      "BOT_ID": {
          "description": "my.telegram.org adresindən API HASH alın",
          "value": ""
       }
